feat: :construction: Add properties in tailwind.config.js (Colors and utilities)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,5 @@
 @import "tailwindcss/utilities";
 
 html {
-  font-family: "Volkhov", serif;
-  font-family: "Poppins", sans-serif;
-  font-family: "Open Sans", sans-serif;
+  @apply text-dark-4 font-poppins font-normal text-base;
 }
